# project

./: .gitignore  README.md  pyproject.toml  requirements.txt
IUH_20bps_tol2/: 2026-02-MD_bl_mvo_result_table.csv  2026-02-MD_etf_prices.csv  2026-02-MD_etf_returns.csv  2026-02-MD_gross_portfolio_returns.csv  2026-02-MD_metrics.json  2026-02-MD_naive_result_table.csv  2026-02-MD_portfolio_returns.csv  2026-02-MD_predictions.csv  2026-02-MD_reduced.csv  2026-02-MD_regimes.csv  2026-02-MD_ridge_result_table.csv  2026-02-MD_strategy_metrics.csv  2026-02-MD_transaction_costs.csv  2026-02-MD_turnover.csv  2026-02-MD_weights.csv
base_kmeans_0bps/: 2026-02-MD_bl_mvo_result_table.csv  2026-02-MD_etf_prices.csv  2026-02-MD_etf_returns.csv  2026-02-MD_gross_portfolio_returns.csv  2026-02-MD_metrics.json  2026-02-MD_naive_result_table.csv  2026-02-MD_predictions.csv  2026-02-MD_reduced.csv  2026-02-MD_regimes.csv  2026-02-MD_ridge_result_table.csv  2026-02-MD_strategy_metrics.csv  2026-02-MD_transaction_costs.csv  2026-02-MD_turnover.csv  2026-02-MD_weights.csv
data/: 2026-02-MD_bl_mvo_result_table.csv  2026-02-MD_etf_prices.csv  2026-02-MD_etf_returns.csv  2026-02-MD_gross_portfolio_returns.csv  2026-02-MD_macro_regime_means.csv  2026-02-MD_macro_regime_means.html  2026-02-MD_metrics.json  2026-02-MD_naive_result_table.csv  2026-02-MD_nber_recession_means.html  2026-02-MD_portfolio_returns.csv  2026-02-MD_predictions.csv  2026-02-MD_processed.csv  2026-02-MD_reduced.csv  2026-02-MD_regimes.csv  2026-02-MD_ridge_result_table.csv  2026-02-MD_strategy_metrics.csv  (+7 more)
src/: main.py  (+1 more)
(+85 files in other folders)
