[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macro-prediction"
version = "0.1.0"
description = "A minimal macroeconomic prediction project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fredapi",
    "numpy",
    "pandas",
    "scikit-learn",
]

[tool.setuptools.packages.find]
where = ["src"]

