[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macro-prediction"
version = "0.1.0"
description = "Negative-month S&P 500 risk model using macro and market data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fredapi",
    "matplotlib",
    "numpy",
    "pandas",
    "scikit-learn",
    "yfinance",
]

[tool.setuptools.packages.find]
where = ["src"]
